--- a/app/src/main/res/layout/content_chatting.xml
+++ b/app/src/main/res/layout/content_chatting.xml
@@ -19,34 +19,55 @@
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
 
+
     <LinearLayout
         android:id="@+id/linearLayout10"
-        android:layout_width="435dp"
-        android:layout_height="65dp"
-        android:layout_weight="1"
-        android:background="#E6E6E6"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="120dp"
-            android:layout_height="83dp"
-            android:layout_gravity="center_vertical"
+        <LinearLayout
+            android:id="@+id/linearLayout11"
+            android:layout_width="match_parent"
+            android:layout_height="130dp"
             android:layout_weight="1"
-            app:srcCompat="@drawable/photo" />
+            android:background="#E6E6E6"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView28"
-            android:layout_width="355dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:text="朋友2"
-            android:textColor="#101010"
-            android:textSize="24sp" />
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="120dp"
+                android:layout_height="83dp"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                app:srcCompat="@drawable/photo" />
+
+            <TextView
+                android:id="@+id/textView28"
+                android:layout_width="355dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:text="朋友2"
+                android:textColor="#101010"
+                android:textSize="24sp" />
+
+        </LinearLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical">
+
+
+            </LinearLayout>
+        </ScrollView>
 
     </LinearLayout>
 
