--- a/app/src/main/res/layout/content_createact.xml
+++ b/app/src/main/res/layout/content_createact.xml
@@ -8,15 +8,6 @@
     tools:showIn="@layout/app_bar_createact">
 
 
-    <Button
-        android:id="@+id/button14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -84,34 +75,119 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="73dp"
-                android:orientation="horizontal"
-                android:paddingLeft="15sp"
-                android:paddingTop="10sp"
-                android:paddingRight="15sp"
-                android:paddingBottom="10sp">
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
 
                 <TextView
-                    android:id="@+id/textView31"
-                    android:layout_width="24dp"
+                    android:id="@+id/textView35"
+                    android:layout_width="61dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginRight="10sp"
                     android:layout_weight="1"
-                    android:text="活動日期"
+                    android:text="揪團類型"
                     android:textSize="24sp" />
 
                 <Button
-                    android:id="@+id/button5"
-                    android:layout_width="174dp"
+                    android:id="@+id/timebtn1"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:onClick="showDayDialog"
-                    android:text="選擇" />
+                    android:text="即時" />
 
+                <Button
+                    android:id="@+id/timebtn2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="指定時段" />
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/t1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="73dp"
+                    android:orientation="horizontal"
+                    android:paddingLeft="15sp"
+                    android:paddingTop="10sp"
+                    android:paddingRight="15sp"
+                    android:paddingBottom="10sp">
+
+                    <TextView
+                        android:id="@+id/textView31"
+                        android:layout_width="24dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginRight="10sp"
+                        android:layout_weight="1"
+                        android:text="開始時間"
+                        android:textSize="24sp" />
+
+                    <Button
+                        android:id="@+id/sDate"
+                        android:layout_width="45dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:onClick="showDayDialog"
+                        android:text="日期" />
+
+                    <Button
+                        android:id="@+id/sTime"
+                        android:layout_width="15dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:onClick="showTimeDialog"
+                        android:text="時間" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal"
+                    android:paddingLeft="15sp"
+                    android:paddingTop="10sp"
+                    android:paddingRight="15sp"
+                    android:paddingBottom="10sp">
+
+                    <TextView
+                        android:id="@+id/textView11"
+                        android:layout_width="182dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginRight="10sp"
+                        android:layout_weight="1"
+                        android:text="結束時間"
+                        android:textSize="24sp" />
+
+                    <Button
+                        android:id="@+id/eDate"
+                        android:layout_width="192dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:onClick="showDayDialog"
+                        android:text="日期" />
+
+                    <Button
+                        android:id="@+id/eTime"
+                        android:layout_width="174dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:onClick="showTimeDialog"
+                        android:text="時間" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+
+            <LinearLayout
+                android:id="@+id/t2"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal"
@@ -121,41 +197,34 @@
                 android:paddingBottom="10sp">
 
                 <TextView
-                    android:id="@+id/textView11"
-                    android:layout_width="182dp"
+                    android:id="@+id/textView25"
+                    android:layout_width="61dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginRight="10sp"
                     android:layout_weight="1"
-                    android:text="活動時間"
+                    android:text="現在開始到"
                     android:textSize="24sp" />
 
                 <Button
-                    android:id="@+id/sTime"
-                    android:layout_width="190dp"
+                    android:id="@+id/aftertimebtn"
+                    android:layout_width="40dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:onClick="showTimeDialog"
-                    android:text="選擇" />
+                    android:onClick="showAfterTimeDialog"
+                    android:text="請選擇時間" />
 
                 <TextView
-                    android:id="@+id/textView9"
-                    android:layout_width="84dp"
+                    android:id="@+id/textView27"
+                    android:layout_width="4dp"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginRight="10sp"
                     android:layout_weight="1"
-                    android:text="至"
-                    android:textSize="20sp" />
-
-                <Button
-                    android:id="@+id/eTime"
-                    android:layout_width="174dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:onClick="showTimeDialog"
-                    android:text="選擇" />
+                    android:text="後結束"
+                    android:textSize="24sp" />
 
             </LinearLayout>
-
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -173,13 +242,13 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginRight="10sp"
                     android:layout_weight="1"
-                    android:text="活動地址"
+                    android:text="活動地點"
                     android:textSize="24sp" />
 
                 <fragment
                     android:id="@+id/autocomplete_fragment"
                     android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
-                    android:layout_width="262dp"
+                    android:layout_width="250dp"
                     android:layout_height="41dp"
                     android:layout_marginTop="5dp" />
 
@@ -267,7 +336,7 @@
                     android:layout_gravity="top"
                     android:layout_marginRight="10sp"
                     android:layout_weight="1"
-                    android:text="活動說明"
+                    android:text="說明"
                     android:textSize="24sp" />
 
                 <EditText
@@ -301,7 +370,7 @@
 
                 <Button
                     android:id="@+id/chooseRestriction"
-                    android:layout_width="wrap_content"
+                    android:layout_width="267dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:text="選擇" />
