--- a/app/src/main/res/layout/content_chatting.xml
+++ b/app/src/main/res/layout/content_chatting.xml
@@ -29,26 +29,26 @@
         <LinearLayout
             android:id="@+id/linearLayout11"
             android:layout_width="match_parent"
-            android:layout_height="130dp"
+            android:layout_height="150dp"
             android:layout_weight="1"
             android:background="#E6E6E6"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/imageView5"
-                android:layout_width="120dp"
-                android:layout_height="83dp"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/photo" />
 
             <TextView
                 android:id="@+id/textView28"
-                android:layout_width="355dp"
+                android:layout_width="340dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
-                android:text="朋友2"
+                android:text="測試活動"
                 android:textColor="#101010"
                 android:textSize="24sp" />
 
@@ -56,7 +56,8 @@
 
         <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="700dp"
+            app:layout_constraintTop_toTOPOf="@+id/linearbo"
             android:layout_weight="1">
 
             <LinearLayout
@@ -64,14 +65,110 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
 
 
+                    <ImageView
+                        android:id="@+id/imageViewt"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/photo" />
+                    <LinearLayout
+                        android:layout_width="350dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/textViewt"
+                            android:layout_width="340dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="1"
+                            android:layout_marginLeft="7dp"
+                            android:layout_marginTop="7dp"
+                            android:text="roger"
+                            android:textColor="#101010"
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:id="@+id/textViewttt"
+                            android:layout_width="340dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="1"
+                            android:layout_marginLeft="7dp"
+                            android:layout_marginTop="7dp"
+                            android:text="mis過了好爽"
+                            android:textColor="#101010"
+                            android:textSize="20sp" />
+                    </LinearLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+
+                    <ImageView
+                        android:id="@+id/imageViewt"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        app:srcCompat="@drawable/photo" />
+                    <LinearLayout
+                        android:layout_width="350dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/textViewt"
+                            android:layout_width="340dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="1"
+                            android:layout_marginLeft="7dp"
+                            android:layout_marginTop="7dp"
+                            android:text="roger"
+                            android:textColor="#101010"
+                            android:textSize="18sp" />
+
+                        <TextView
+                            android:id="@+id/textViewttt"
+                            android:layout_width="340dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:layout_weight="1"
+                            android:layout_marginLeft="7dp"
+                            android:layout_marginTop="7dp"
+                            android:text="mis過了好爽"
+                            android:textColor="#101010"
+                            android:textSize="20sp" />
+                    </LinearLayout>
+                </LinearLayout>
             </LinearLayout>
+
         </ScrollView>
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearbo"
         android:layout_width="421dp"
         android:layout_height="63dp"
         android:orientation="horizontal"
