--- a/app/src/main/res/layout/content_chatting.xml
+++ b/app/src/main/res/layout/content_chatting.xml
@@ -89,7 +89,7 @@
                         android:orientation="vertical">
 
                         <TextView
-                            android:id="@+id/textViewt"
+                            android:id="@+id/textViewtt"
                             android:layout_width="340dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
@@ -101,7 +101,7 @@
                             android:textSize="18sp" />
 
                         <TextView
-                            android:id="@+id/textViewttt"
+                            android:id="@+id/textViewttttt"
                             android:layout_width="340dp"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center_vertical"
@@ -121,7 +121,7 @@
 
 
                     <ImageView
-                        android:id="@+id/imageViewt"
+                        android:id="@+id/imageViewat"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
                         android:layout_marginBottom="10dp"
